# udemy-opentelemetry-for-observability

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  compose.dev.yml  compose.yml
app/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  jest.config.ts  package-lock.json  package.json  tsconfig.json
app/frontend/src/: index.ts  instrumentation.ts  logger.ts  metrics.ts  tracers.ts  types.ts
app/frontend/src/public/: app.js  index.html  style.css
app/frontend/src/routes/: translation.ts
app/frontend/src/services/: queue.ts  sse.ts
app/frontend/tests/__mocks__/: ioredis.ts  uuid.ts
app/frontend/tests/routes/: translation.test.ts
app/frontend/tests/services/: sse.test.ts
app/worker/: .dockerignore  Dockerfile  Dockerfile.dev  download_models.py  pyproject.toml  requirements.txt
app/worker/src/: __init__.py  config.py  instrumentation.py  logger.py  main.py  metrics.py  queue.py  translator.py
app/worker/tests/: conftest.py  test_main.py  test_queue.py  test_translator.py
compose/: compose.app.yaml  compose.dev.yaml  compose.observability.yaml  compose.prod.yaml  compose.yaml  grafana-datasources.yaml  otel-collector-config.yaml  prometheus-config.yaml
